UtahLiveDataTest/src/objects/AnnouncementFundingAccount__c.object
<CustomObject>
    <description>[Business]  Funding Accounts associated with the opportunity</description>
    <fields>
        <fullName>AllocatedAmount__c</fullName>
        <label>Allocated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Announcement__c</fullName>
        <label>Announcement</label>
        <referenceTo>Announcement__c</referenceTo>
        <relationshipName>Announcement</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CommittedAmount__c</fullName>
        <description>This field  rolls up to Funding Account</description>
        <label>Committed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FundStatus__c</fullName>
        <formula>IF(RemainingBalance__c &lt; 0, &apos;&lt;i class=&quot;fa fa-thumbs-o-down fa-lg&quot; title=&quot;Deficit&quot;&gt;&lt;/i&gt;&apos;, &apos;&lt;i class=&quot;fa fa-thumbs-o-up fa-lg&quot; title=&quot;Ok&quot;&gt;&lt;/i&gt;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fund Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundingAccount__c</fullName>
        <label>Funding Account</label>
        <referenceTo>FundingAccount__c</referenceTo>
        <relationshipLabel>Funding Opportunity Funding Accounts</relationshipLabel>
        <relationshipName>Announcement_Funding_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HideAnnouncementEdit__c</fullName>
        <formula>NOT(OR(ISPICKVAL(Announcement__r.Status__c,&apos;Created&apos;), 
ISPICKVAL(Announcement__r.Status__c,&apos;Reviewed&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Announcement Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideRemoveFundingAccounts__c</fullName>
        <formula>NOT(AND(Announcement__r.ScheduleManager__c = $User.Id, OR(text(Announcement__r.Status__c) = &apos;In Progress&apos; ,text(Announcement__r.Status__c) = &apos;Validated&apos;) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideRemoveFundingAccounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Primary Funding Account?</description>
        <inlineHelpText>Is Primary Funding Account?</inlineHelpText>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes for Announcement Funding Account</description>
        <inlineHelpText>Notes for Announcement Funding Account</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RemainingBalance__c</fullName>
        <formula>FundingAccount__r.AvailableAmount__c - AllocatedAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Funding Opportunity Funding Account</label>
    <nameField>
        <displayFormat>AFA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Opportunity Funding Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>